--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
       <div>
         <a class="btn secondary" href="#curriculum">Curriculum</a>
         <a class="btn" href="#optin">Get the Free Cheat Sheet</a>
+        <!-- Direct link to purchase the full micro-course on Gumroad -->
+        <a class="btn" href="https://jaganmohan7.gumroad.com/l/sgrqy" target="_blank">Enroll Now</a>
       </div>
     </nav>
 
@@ -234,6 +236,15 @@
           <summary>Will this work outside the U.S.?</summary>
           <p class="muted">Yes. Everything is platform-agnostic and uses globally available tools.</p>
         </details>
+      </div>
+    </section>
+
+    <!-- Paid course call-to-action -->
+    <section class="section">
+      <div class="card" style="padding:24px;text-align:center;">
+        <h2>Ready to build and sell your digital product?</h2>
+        <p class="muted" style="margin-bottom:20px;">Get step-by-step video lessons, templates and insider strategies in the full micro-course.</p>
+        <a class="btn" href="https://jaganmohan7.gumroad.com/l/sgrqy" target="_blank" style="font-size:18px;padding:16px 24px;">Enroll Now for $47</a>
       </div>
     </section>
 
